<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DartsProject</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="zero_one">01ゲーム</string>
    <string name="cricket">クリケット</string>
    <string name="count_up">カウントアップ</string>
    <string name="eagle_eye">イーグルアイ</string>
    <string name="title_activity_count_up">CountUpActivity</string>
    <string name="title_activity_zero_one">ZeroOneActivity</string>
    <string name="calc_panel_key_undo">UNTHROW</string>
    <string name="calc_panel_key_double">DOUBLE</string>
    <string name="calc_panel_key_triple">TRIPLE</string>
    <string name="calc_panel_key_next">NEXT</string>
    <string name="calc_panel_key_single_bull">S-BULL</string>
    <string name="calc_panel_key_double_bull">D-BULL</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
